fixed broken scripture lookup template reference and modified templates to make the sermon inlines more readable

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -337,6 +337,13 @@ ul {
         padding-left: 1em;
         color: #628703; 
     }
+
+    .inline_text {
+        background: url('/images/lqm.png') no-repeat left top;
+        margin-left: 30px;
+        padding-left: 1em;
+    }
+
     .lastq {
         background: url('/images/rqm.png') no-repeat right top;
         height: 60px;
